pie chart thing

--- a/.eslintrc
+++ b/.eslintrc
@@ -1,27 +1,34 @@
 {
+  "parser": "babel-eslint",
   "env": {
-    "node": true
-  },
-  "ecmaFeatures": {
-    "arrowFunctions": true,
-    "binaryLiterals": true,
-    "blockBindings": true,
-    "classes": true,
-    "forOf": true,
-    "generators": true,
-    "objectLiteralComputedProperties": true,
-    "objectLiteralShorthandProperties": true,
-    "objectLiteralShorthandMethods": true,
-    "octalLiterals": true,
-    "spread": true,
-    "templateStrings": true
+    "browser": true,
+    "node": true,
+    "mocha": true
   },
   "rules": {
-    "strict": 1,
+    "strict": 0,
     "quotes": [2, "single"],
     "no-underscore-dangle": [0],
     "new-cap": 0,
     "no-shadow": 0,
-    "comma-dangle": 0
-  }
+    "comma-dangle": 0,
+
+    // react stuff
+    "react/jsx-boolean-value": 1,
+    "react/jsx-no-undef": 2,
+    "react/jsx-uses-react": 2,
+    "react/jsx-uses-vars": 1,
+    "react/no-did-mount-set-state": 1,
+    "react/no-did-update-set-state": 1,
+    "react/no-unknown-property": 1,
+    "react/react-in-jsx-scope": 1,
+    "react/self-closing-comp": 1,
+    "react/wrap-multilines": 1
+  },
+  "ecmaFeatures": {
+    "jsx": true
+  },
+  "plugins": [
+    'react'
+  ]
 }
