--- a/package.json
+++ b/package.json
@@ -4,13 +4,40 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "lint": "node_modules/.bin/eslint app/",
+    "dev": "node_modules/.bin/webpack-dev-server"
   },
   "author": "Thomas Boyt <me@thomasboyt.com>",
   "license": "MIT",
   "dependencies": {
-    "immutable": "^3.7.6",
+    "d3": "^3.5.12",
+    "immutable": "^3.7.3",
     "js-yaml": "^3.4.6",
-    "moment": "^2.10.6"
+    "moment": "^2.10.6",
+    "react": "^0.14.3",
+    "react-dom": "^0.14.3"
+  },
+  "devDependencies": {
+    "babel-core": "^6.3.17",
+    "babel-eslint": "^3.1.8",
+    "babel-loader": "^6.2.0",
+    "babel-plugin-syntax-async-functions": "^6.3.13",
+    "babel-plugin-transform-object-rest-spread": "^6.3.13",
+    "babel-plugin-transform-regenerator": "^6.3.13",
+    "babel-preset-es2015": "^6.3.13",
+    "babel-preset-react": "^6.3.13",
+    "css-loader": "^0.13.1",
+    "eslint": "^0.21.2",
+    "eslint-plugin-react": "^2.3.0",
+    "expect": "^1.13.2",
+    "json-loader": "^0.5.4",
+    "less": "^2.5.1",
+    "less-loader": "^2.2.0",
+    "minimatch": "^3.0.0",
+    "style-loader": "^0.12.2",
+    "webpack": "^1.12.9",
+    "webpack-dev-server": "^1.14.0",
+    "webpack-merge": "^0.3.2",
+    "yaml-loader": "^0.1.0"
   }
 }
