--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
   "author": "Thomas Boyt <me@thomasboyt.com>",
   "license": "MIT",
   "dependencies": {
+    "bootstrap": "^4.0.0-alpha.2",
     "d3": "^3.5.12",
     "immutable": "^3.7.3",
     "js-yaml": "^3.4.6",
     "moment": "^2.10.6",
+    "node-sass": "^3.4.2",
     "react": "^0.14.3",
-    "react-dom": "^0.14.3"
+    "react-dom": "^0.14.3",
+    "sass-loader": "^3.1.2"
   },
   "devDependencies": {
     "babel-core": "^6.3.17",
